// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Radio Disabled not selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
        data-testid="radio-input"
      >
        <input
          checked={false}
          css={
            Object {
              "map": undefined,
              "name": "i91fru",
              "next": undefined,
              "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
              "toString": [Function],
            }
          }
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1nrms42",
              "next": undefined,
              "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
              "toString": [Function],
            }
          }
        >
          <span
            css={
              Object {
                "map": undefined,
                "name": "139u0tn",
                "next": undefined,
                "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.75rem #e7e7e7;
    position: absolute;
  ",
                "toString": [Function],
              }
            }
          />
          <span
            css={
              Object {
                "map": undefined,
                "name": "1iv8hzm",
                "next": undefined,
                "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
                "toString": [Function],
              }
            }
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
        data-testid="radio-input"
      >
        <input
          checked={false}
          css={
            Object {
              "map": undefined,
              "name": "i91fru",
              "next": undefined,
              "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
              "toString": [Function],
            }
          }
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1nrms42",
              "next": undefined,
              "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
              "toString": [Function],
            }
          }
        >
          <span
            css={
              Object {
                "map": undefined,
                "name": "5yzrgt",
                "next": undefined,
                "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem #e7e7e7;
    position: absolute;
  ",
                "toString": [Function],
              }
            }
          />
          <span
            css={
              Object {
                "map": undefined,
                "name": "1iv8hzm",
                "next": undefined,
                "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
                "toString": [Function],
              }
            }
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Disabled selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <span
    css={[Function]}
    data-testid="radio-input"
  >
    <input
      checked={true}
      css={
        Object {
          "map": undefined,
          "name": "i91fru",
          "next": undefined,
          "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
          "toString": [Function],
        }
      }
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      required={false}
      type="radio"
      value="on"
    />
    <span
      css={
        Object {
          "map": undefined,
          "name": "1nrms42",
          "next": undefined,
          "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
          "toString": [Function],
        }
      }
    >
      <span
        css={
          Object {
            "map": undefined,
            "name": "p5fxb6",
            "next": undefined,
            "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem currentColor, inset 0px 0px 0px 0.25rem #fefefe, inset 0px 0px 0px 0.75rem currentColor;
    position: absolute;
  ",
            "toString": [Function],
          }
        }
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1iv8hzm",
            "next": undefined,
            "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
            "toString": [Function],
          }
        }
      />
    </span>
  </span>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio  (\`checked === undefined\`) 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
        data-testid="radio-input"
      >
        <input
          checked={false}
          css={
            Object {
              "map": undefined,
              "name": "i91fru",
              "next": undefined,
              "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
              "toString": [Function],
            }
          }
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1nrms42",
              "next": undefined,
              "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
              "toString": [Function],
            }
          }
        >
          <span
            css={
              Object {
                "map": undefined,
                "name": "s78ecu",
                "next": undefined,
                "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.75rem #dbdbdb;
    position: absolute;
  ",
                "toString": [Function],
              }
            }
          />
          <span
            css={
              Object {
                "map": undefined,
                "name": "1iv8hzm",
                "next": undefined,
                "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
                "toString": [Function],
              }
            }
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
        data-testid="radio-input"
      >
        <input
          checked={false}
          css={
            Object {
              "map": undefined,
              "name": "i91fru",
              "next": undefined,
              "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
              "toString": [Function],
            }
          }
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1nrms42",
              "next": undefined,
              "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
              "toString": [Function],
            }
          }
        >
          <span
            css={
              Object {
                "map": undefined,
                "name": "ir375v",
                "next": undefined,
                "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem #9b9b9b;
    position: absolute;
  ",
                "toString": [Function],
              }
            }
          />
          <span
            css={
              Object {
                "map": undefined,
                "name": "1iv8hzm",
                "next": undefined,
                "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
                "toString": [Function],
              }
            }
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio (\`checked === false\`) 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
        data-testid="radio-input"
      >
        <input
          checked={false}
          css={
            Object {
              "map": undefined,
              "name": "i91fru",
              "next": undefined,
              "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
              "toString": [Function],
            }
          }
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1nrms42",
              "next": undefined,
              "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
              "toString": [Function],
            }
          }
        >
          <span
            css={
              Object {
                "map": undefined,
                "name": "s78ecu",
                "next": undefined,
                "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.75rem #dbdbdb;
    position: absolute;
  ",
                "toString": [Function],
              }
            }
          />
          <span
            css={
              Object {
                "map": undefined,
                "name": "1iv8hzm",
                "next": undefined,
                "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
                "toString": [Function],
              }
            }
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        css={[Function]}
        data-testid="radio-input"
      >
        <input
          checked={false}
          css={
            Object {
              "map": undefined,
              "name": "i91fru",
              "next": undefined,
              "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
              "toString": [Function],
            }
          }
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1nrms42",
              "next": undefined,
              "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
              "toString": [Function],
            }
          }
        >
          <span
            css={
              Object {
                "map": undefined,
                "name": "ir375v",
                "next": undefined,
                "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem #9b9b9b;
    position: absolute;
  ",
                "toString": [Function],
              }
            }
          />
          <span
            css={
              Object {
                "map": undefined,
                "name": "1iv8hzm",
                "next": undefined,
                "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
                "toString": [Function],
              }
            }
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Radio Playground 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <span
    css={[Function]}
    data-testid="radio-input"
  >
    <input
      checked={true}
      css={
        Object {
          "map": undefined,
          "name": "i91fru",
          "next": undefined,
          "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
          "toString": [Function],
        }
      }
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      required={false}
      type="radio"
      value="on"
    />
    <span
      css={
        Object {
          "map": undefined,
          "name": "1nrms42",
          "next": undefined,
          "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
          "toString": [Function],
        }
      }
    >
      <span
        css={
          Object {
            "map": undefined,
            "name": "p5fxb6",
            "next": undefined,
            "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem currentColor, inset 0px 0px 0px 0.25rem #fefefe, inset 0px 0px 0px 0.75rem currentColor;
    position: absolute;
  ",
            "toString": [Function],
          }
        }
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1iv8hzm",
            "next": undefined,
            "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
            "toString": [Function],
          }
        }
      />
    </span>
  </span>
</div>
`;

exports[`Storyshots Design System/Radio Radio showcase 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <span
      css={[Function]}
      data-testid="radio-input"
    >
      <input
        checked={false}
        css={
          Object {
            "map": undefined,
            "name": "i91fru",
            "next": undefined,
            "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
            "toString": [Function],
          }
        }
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="a"
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1nrms42",
            "next": undefined,
            "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
            "toString": [Function],
          }
        }
      >
        <span
          css={
            Object {
              "map": undefined,
              "name": "s78ecu",
              "next": undefined,
              "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.75rem #dbdbdb;
    position: absolute;
  ",
              "toString": [Function],
            }
          }
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1iv8hzm",
              "next": undefined,
              "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
              "toString": [Function],
            }
          }
        />
      </span>
    </span>
    <span
      css={[Function]}
      data-testid="radio-input"
    >
      <input
        checked={false}
        css={
          Object {
            "map": undefined,
            "name": "i91fru",
            "next": undefined,
            "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
            "toString": [Function],
          }
        }
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="b"
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1nrms42",
            "next": undefined,
            "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
            "toString": [Function],
          }
        }
      >
        <span
          css={
            Object {
              "map": undefined,
              "name": "ir375v",
              "next": undefined,
              "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem #9b9b9b;
    position: absolute;
  ",
              "toString": [Function],
            }
          }
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1iv8hzm",
              "next": undefined,
              "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
              "toString": [Function],
            }
          }
        />
      </span>
    </span>
    <span
      css={[Function]}
      data-testid="radio-input"
    >
      <input
        checked={true}
        css={
          Object {
            "map": undefined,
            "name": "i91fru",
            "next": undefined,
            "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
            "toString": [Function],
          }
        }
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="c"
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1nrms42",
            "next": undefined,
            "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
            "toString": [Function],
          }
        }
      >
        <span
          css={
            Object {
              "map": undefined,
              "name": "p5fxb6",
              "next": undefined,
              "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem currentColor, inset 0px 0px 0px 0.25rem #fefefe, inset 0px 0px 0px 0.75rem currentColor;
    position: absolute;
  ",
              "toString": [Function],
            }
          }
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1iv8hzm",
              "next": undefined,
              "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
              "toString": [Function],
            }
          }
        />
      </span>
    </span>
    <span
      css={[Function]}
      data-testid="radio-input"
    >
      <input
        checked={false}
        css={
          Object {
            "map": undefined,
            "name": "i91fru",
            "next": undefined,
            "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
            "toString": [Function],
          }
        }
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="d"
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1nrms42",
            "next": undefined,
            "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
            "toString": [Function],
          }
        }
      >
        <span
          css={
            Object {
              "map": undefined,
              "name": "139u0tn",
              "next": undefined,
              "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.75rem #e7e7e7;
    position: absolute;
  ",
              "toString": [Function],
            }
          }
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1iv8hzm",
              "next": undefined,
              "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
              "toString": [Function],
            }
          }
        />
      </span>
    </span>
    <span
      css={[Function]}
      data-testid="radio-input"
    >
      <input
        checked={false}
        css={
          Object {
            "map": undefined,
            "name": "i91fru",
            "next": undefined,
            "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
            "toString": [Function],
          }
        }
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="e"
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1nrms42",
            "next": undefined,
            "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
            "toString": [Function],
          }
        }
      >
        <span
          css={
            Object {
              "map": undefined,
              "name": "5yzrgt",
              "next": undefined,
              "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem #e7e7e7;
    position: absolute;
  ",
              "toString": [Function],
            }
          }
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1iv8hzm",
              "next": undefined,
              "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
              "toString": [Function],
            }
          }
        />
      </span>
    </span>
    <span
      css={[Function]}
      data-testid="radio-input"
    >
      <input
        checked={true}
        css={
          Object {
            "map": undefined,
            "name": "i91fru",
            "next": undefined,
            "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
            "toString": [Function],
          }
        }
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="g"
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1nrms42",
            "next": undefined,
            "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
            "toString": [Function],
          }
        }
      >
        <span
          css={
            Object {
              "map": undefined,
              "name": "p5fxb6",
              "next": undefined,
              "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem currentColor, inset 0px 0px 0px 0.25rem #fefefe, inset 0px 0px 0px 0.75rem currentColor;
    position: absolute;
  ",
              "toString": [Function],
            }
          }
        />
        <span
          css={
            Object {
              "map": undefined,
              "name": "1iv8hzm",
              "next": undefined,
              "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
              "toString": [Function],
            }
          }
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <span
    css={[Function]}
    data-testid="radio-input"
  >
    <input
      checked={true}
      css={
        Object {
          "map": undefined,
          "name": "i91fru",
          "next": undefined,
          "styles": "
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;

  &:disabled {
    cursor: default;
  }
",
          "toString": [Function],
        }
      }
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      required={false}
      type="radio"
      value="on"
    />
    <span
      css={
        Object {
          "map": undefined,
          "name": "1nrms42",
          "next": undefined,
          "styles": "
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: box-shadow 0.3s ease;
  ;
",
          "toString": [Function],
        }
      }
    >
      <span
        css={
          Object {
            "map": undefined,
            "name": "p5fxb6",
            "next": undefined,
            "styles": "
    transition: all 0.2s ease;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 0px 0.125rem currentColor, inset 0px 0px 0px 0.25rem #fefefe, inset 0px 0px 0px 0.75rem currentColor;
    position: absolute;
  ",
            "toString": [Function],
          }
        }
      />
      <span
        css={
          Object {
            "map": undefined,
            "name": "1iv8hzm",
            "next": undefined,
            "styles": "
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  transition: all 0.2s ease;
  ;
",
            "toString": [Function],
          }
        }
      />
    </span>
  </span>
</div>
`;
